@@ -228,9 +228,7 @@ mailing list.  To subscribe or see the list archives, go to the
 [% END %][% IF support.extra %]
 [% support.extra %]
 [% END %]
-[% IF support.cpan %]
-For bug tracking, use the [CPAN bug
-tracker](https://rt.cpan.org/Dist/Display.html?Name=[% support.cpan %]).[% ELSIF support.github %]
+[% IF support.github %]
 For bug tracking, use the [issue tracker on
 GitHub](https://github.com/[% support.github %]/issues).[% ELSE %]
 I welcome bug reports and patches for this package at
@@ -252,12 +250,9 @@ or [view the repository on the web]([% vcs.browse %]).
 The eyrie.org repository is the canonical one, maintained by the
 author, but using GitHub is probably more convenient for most purposes.
 Pull requests are gratefully reviewed and normally accepted.
-[% IF support.cpan %]It's probably better to use the CPAN bug tracker than
-GitHub issues, though, to keep all Perl module issues in the same
-place.[% END %]
 [% ELSIF vcs.type == 'Git' %]
 When contributing modifications, patches (possibly generated by
-git-format-patch) are preferred to Git pull requests.
+`git-format-patch`) are preferred to Git pull requests.
 [% END %]
 ## License
 
