@@ -203,12 +203,7 @@ TESTING
 [% END %][% IF support.extra %]
 [% indent(to_text(support.extra), 2) %]
 [% END %]
-[% IF support.cpan %]
-  For bug tracking, use the CPAN bug tracker at:
-
-      https://rt.cpan.org/Dist/Display.html?Name=[% support.cpan %]
-
-[% ELSIF support.github %]
+[% IF support.github %]
   For bug tracking, use the issue tracker on GitHub:
 
       https://github.com/[% support.github %]/issues
@@ -238,9 +233,6 @@ SOURCE REPOSITORY
   The eyrie.org repository is the canonical one, maintained by the author,
   but using GitHub is probably more convenient for most purposes.  Pull
   requests are gratefully reviewed and normally accepted.
-  [% IF support.cpan %]It's probably better to use the CPAN bug tracker
-  than GitHub issues, though, to keep all Perl module issues in the same
-  place.[% END %]
 [% ELSIF vcs.type == 'Git' %]
   When contributing modifications, patches (possibly generated by
   git-format-patch) are preferred to Git pull requests.
