@@ -105,9 +105,9 @@ SUPPORT
   will always have the current version of this package, the current
   documentation, and pointers to any additional resources.
 
-  For bug tracking, use the CPAN bug tracker at:
+  For bug tracking, use the issue tracker on GitHub:
 
-      https://rt.cpan.org/Dist/Display.html?Name=PGP-Sign
+      https://github.com/rra/pgp-sign/issues
 
   However, please be aware that I tend to be extremely busy and work
   projects often take priority.  I'll save your report and get to it as
@@ -130,9 +130,7 @@ SOURCE REPOSITORY
 
   The eyrie.org repository is the canonical one, maintained by the author,
   but using GitHub is probably more convenient for most purposes.  Pull
-  requests are gratefully reviewed and normally accepted.  It's probably
-  better to use the CPAN bug tracker than GitHub issues, though, to keep
-  all Perl module issues in the same place.
+  requests are gratefully reviewed and normally accepted.
 
 LICENSE
 
