@@ -9,6 +9,11 @@ DocKnot 4.00 (unreleased)
     The new metadata format is checked against a schema when read.
     DocKnot now depends on YAML::XS and Kwalify.
 
+    Drop support for the support.cpan metadata key, since the CPAN RT
+    instance is going away.  For packages with support.cpan set, if
+    vcs.github was set and support.github was not, set support.github to
+    match vcs.github during a docknot update.
+
     Word wrap numeric lists and, in Markdown output, quoted paragraphs.
     Previously these preserved the original spacing from the input text
     snippets.
